--- a/app/global.css
+++ b/app/global.css
@@ -17,6 +17,11 @@
 }
 
 body {
+background-color: rgba(83, 82, 29, 0.459);
+}
+
+
+/*body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,4 +29,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+}*/
